--- a/MobileGPT_app/app/src/main/res/values/strings.xml
+++ b/MobileGPT_app/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">MobileGPT</string>
     <string name="accessibility_service_description">Mobile GPT agent that autonomously interact with mobile apps on instruction</string>
-    <string name="accessibility_service_label" translatable="false">FluidGPT Accessibility</string>
+    <string name="accessibility_service_label" translatable="false">MobileGPT Accessibility</string>
 </resources>
